--- a/COCOSDA(app)/app/src/main/res/layout/activity_registration.xml
+++ b/COCOSDA(app)/app/src/main/res/layout/activity_registration.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity">
+    tools:context=".RegistrationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="30dp">
 
 
         <TextView
@@ -25,40 +25,66 @@
             android:layout_marginBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="Kit Station"
+            android:text="Register Station"
             android:textAlignment="center"
             android:textSize="36sp"
-            android:textStyle="normal"/>
+            android:textStyle="normal" />
 
         <Button
             android:id="@+id/buttonLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Logout"
-            android:textStyle="normal"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            />
+            android:text="Logout"
+            android:textStyle="normal" />
 
         <Button
-            android:id="@+id/buttonScan"
+            android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Scan QR Code"
-            android:textStyle="normal"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
             android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
+            android:text="Registration"
+            android:textStyle="normal" />
+
+        <Button
+            android:id="@+id/btnSess"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
-            />
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="Start Session"
+            android:textStyle="normal" />
+
+        <Button
+            android:id="@+id/btnCertClaim"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:text="Certificate Claiming"
+            android:textStyle="normal" />
 
         <TextView
             android:id="@+id/statusName"
