--- a/COCOSDA(app)/app/src/main/res/layout/activity_registration_qr.xml
+++ b/COCOSDA(app)/app/src/main/res/layout/activity_registration_qr.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserActivity">
+    tools:context=".RegistrationQRActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,16 +25,16 @@
             android:layout_marginBottom="10dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:text="Kit Station"
+            android:text="Registration"
             android:textAlignment="center"
             android:textSize="36sp"
-            android:textStyle="normal"/>
+            android:textStyle="normal" />
 
         <Button
             android:id="@+id/buttonLogout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Logout"
+            android:text="back"
             android:textStyle="normal"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
@@ -49,7 +49,7 @@
             android:id="@+id/buttonScan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Scan QR Code"
+            android:text="Scan QR code"
             android:textStyle="normal"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
